--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
@@ -17,12 +17,12 @@
         <script src="game.js"></script>
 
         <div id="title" class="box">
-            <h1>Tritris Fork</h1>
+            <h1>Tritris OwO Fork</h1>
             <p style="font-size: 12pt">
-                Welcome to True-cc's Tritris fork!
+                This is Chidori UwU
                 <br />
                 Use the pieces to fill as many lines as possible before the game
-                gets too fast and you top out! This is a fork of the original one. 
+                gets too fast and you top out! This is a fork of a fork of the original one. 
                 THIS FORK IS NOT ALLOWED TO BE USED FOR WORLD RECORDS ATTEMPTS!!!
                 <br />
                 Click <button id="openTutorial" class="darkButton">How to Play</button> for strategies.
