triangle density implemented

--- a/index.html
+++ b/index.html
@@ -17,20 +17,21 @@
         <script src="game.js"></script>
 
         <div id="title" class="box">
-            <h1>Tritris OwO Fork v6</h1>
+            <h1>Tritris OwO Fork v7</h1>
             <p style="font-size: 12pt">
                 This is Chidori UwU
                 <br />
                 Use the pieces to fill as many lines as possible before the game
                 gets too fast and you top out! This is a fork of a fork of the original one. 
-                THIS FORK IS NOT ALLOWED TO BE USED FOR WORLD RECORDS ATTEMPTS!!!
+                There is b-type here. Format is height:width:7::11:[#lines to clear]:[#lines of garbage]:[density of triangles]
+
                 <br />
                 Click <button id="openTutorial" class="darkButton">How to Play</button> for strategies.
                 <br />
                 Click <button id="openSettings" class="darkButton">Settings</button> to change controls.
                 <br />
                 <br />
-                <a href="https://github.com/True-cc/tritris" style="color: black">
+                <a href="https://github.com/cynthiachidori/tritris" style="color: black">
                     <b>This fork!</b>
                     <img height="25" src="assets/githubLogo.png" />
                 </a>
